--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 flask==2.3.3
 flask-cors==4.0.0
-faster-whisper==0.9.0
+openai-whisper==20231117
 yt-dlp==2023.9.24
-torch==2.0.1
+torch==2.0.1+cpu --extra-index-url https://download.pytorch.org/whl/cpu
+torchaudio==2.0.2+cpu --extra-index-url https://download.pytorch.org/whl/cpu
 numpy==1.24.3
 werkzeug==2.3.7
 gunicorn==21.2.0
